// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots (deterministic conversion output) > matches the JSX component snapshot 1`] = `
{
  "ok": true,
  "value": {
    "report": {
      "blockTypeCounts": {
        "card": 1,
        "heading": 1,
        "paragraph": 1,
      },
      "confidence": 0.87,
      "convertedBlockCount": 3,
      "detectedFramework": "react-jsx",
      "ignoredCode": [],
      "replacedRuntimeBehavior": [],
      "rootCount": 1,
      "unsupportedConstructs": [
        {
          "code": "unresolved-identifier",
          "message": "Identifier "title" cannot be resolved statically",
          "path": "div > h3",
        },
      ],
      "warnings": [
        {
          "code": "css-class-reference",
          "message": "Class "card" was not converted (no matching style utility or CSS applied)",
          "path": "div",
        },
      ],
    },
    "tree": {
      "nodes": {
        "conv-1": {
          "children": [],
          "hidden": false,
          "id": "conv-1",
          "locked": false,
          "parentId": "conv-3",
          "props": {
            "align": "left",
            "color": "",
            "level": 3,
            "text": "Heading 3",
          },
          "responsive": {},
          "style": {
            "fontWeight": 700,
            "margin": "0 0 0.5rem",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-2": {
          "children": [],
          "hidden": false,
          "id": "conv-2",
          "locked": false,
          "parentId": "conv-3",
          "props": {
            "align": "left",
            "text": "Static description",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-3": {
          "children": [
            "conv-1",
            "conv-2",
          ],
          "hidden": false,
          "id": "conv-3",
          "locked": false,
          "parentId": null,
          "props": {
            "importClasses": [
              "card",
            ],
            "name": "Card",
          },
          "responsive": {},
          "style": {
            "background": "var(--card, #ffffff)",
            "borderRadius": "0.75rem",
            "padding": "1rem",
          },
          "type": "card",
          "visible": true,
        },
      },
      "rootIds": [
        "conv-3",
      ],
    },
  },
}
`;

exports[`snapshots (deterministic conversion output) > matches the contact form snapshot 1`] = `
{
  "ok": true,
  "value": {
    "report": {
      "blockTypeCounts": {
        "button": 1,
        "container": 1,
        "form": 1,
        "heading": 1,
        "input": 2,
        "textarea": 1,
      },
      "confidence": 0.9,
      "convertedBlockCount": 7,
      "detectedFramework": "tailwind",
      "ignoredCode": [],
      "replacedRuntimeBehavior": [],
      "rootCount": 1,
      "unsupportedConstructs": [],
      "warnings": [
        {
          "code": "css-class-reference",
          "message": "Class "contact-section" was not converted (no matching style utility or CSS applied)",
          "path": "section",
        },
        {
          "code": "css-class-reference",
          "message": "Class "btn" was not converted (no matching style utility or CSS applied)",
          "path": "section > form > button",
        },
      ],
    },
    "tree": {
      "nodes": {
        "conv-1": {
          "children": [],
          "hidden": false,
          "id": "conv-1",
          "locked": false,
          "parentId": "conv-7",
          "props": {
            "align": "left",
            "color": "",
            "level": 2,
            "text": "Contact us",
          },
          "responsive": {},
          "style": {
            "margin": "0 0 0.5rem",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-2": {
          "children": [],
          "hidden": false,
          "id": "conv-2",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "label": "Name",
            "placeholder": "Jane Doe",
          },
          "responsive": {},
          "style": {
            "borderRadius": "0.375rem",
            "padding": "0.5rem 0.75rem",
          },
          "type": "input",
          "visible": true,
        },
        "conv-3": {
          "children": [],
          "hidden": false,
          "id": "conv-3",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "label": "Email",
            "placeholder": "jane@example.com",
          },
          "responsive": {},
          "style": {
            "borderRadius": "0.375rem",
            "padding": "0.5rem 0.75rem",
          },
          "type": "input",
          "visible": true,
        },
        "conv-4": {
          "children": [],
          "hidden": false,
          "id": "conv-4",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "label": "Your message",
            "placeholder": "Your message",
          },
          "responsive": {},
          "style": {
            "borderRadius": "0.375rem",
            "minHeight": "6rem",
            "padding": "0.5rem 0.75rem",
          },
          "type": "textarea",
          "visible": true,
        },
        "conv-5": {
          "children": [],
          "hidden": false,
          "id": "conv-5",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "href": "#",
            "importClasses": [
              "btn",
            ],
            "style": "primary",
            "text": "Send message",
          },
          "responsive": {},
          "style": {
            "background": "var(--primary, #7c5cfc)",
            "borderRadius": "0.5rem",
            "color": "var(--primary-foreground, #ffffff)",
            "fontWeight": 600,
            "padding": "0.75rem 1.5rem",
          },
          "type": "button",
          "visible": true,
        },
        "conv-6": {
          "children": [
            "conv-2",
            "conv-3",
            "conv-4",
            "conv-5",
          ],
          "hidden": false,
          "id": "conv-6",
          "locked": false,
          "parentId": "conv-7",
          "props": {
            "gap": 16,
            "layoutDirection": "column",
            "name": "Form",
          },
          "responsive": {},
          "style": {
            "display": "flex",
            "flexDirection": "column",
            "gap": "1rem",
            "maxWidth": "28rem",
          },
          "type": "form",
          "visible": true,
        },
        "conv-7": {
          "children": [
            "conv-1",
            "conv-6",
          ],
          "hidden": false,
          "id": "conv-7",
          "locked": false,
          "parentId": null,
          "props": {
            "importClasses": [
              "contact-section",
            ],
            "name": "Section",
          },
          "responsive": {},
          "style": {
            "display": "flex",
            "flexDirection": "column",
            "gap": "1rem",
            "padding": "2rem 0",
            "paddingBottom": "4rem",
            "paddingTop": "4rem",
          },
          "type": "container",
          "visible": true,
        },
      },
      "rootIds": [
        "conv-7",
      ],
    },
  },
}
`;

exports[`snapshots (deterministic conversion output) > matches the hero snapshot 1`] = `
{
  "ok": true,
  "value": {
    "report": {
      "blockTypeCounts": {
        "button": 1,
        "container": 1,
        "heading": 1,
        "paragraph": 1,
        "row": 1,
      },
      "confidence": 0.85,
      "convertedBlockCount": 5,
      "detectedFramework": "tailwind",
      "ignoredCode": [],
      "replacedRuntimeBehavior": [],
      "rootCount": 1,
      "unsupportedConstructs": [],
      "warnings": [
        {
          "code": "css-class-reference",
          "message": "Class "hero" was not converted (no matching style utility or CSS applied)",
          "path": "section",
        },
        {
          "code": "css-class-reference",
          "message": "Class "btn" was not converted (no matching style utility or CSS applied)",
          "path": "section > div > a",
        },
        {
          "code": "css-class-reference",
          "message": "Class "btn-primary" was not converted (no matching style utility or CSS applied)",
          "path": "section > div > a",
        },
      ],
    },
    "tree": {
      "nodes": {
        "conv-1": {
          "children": [],
          "hidden": false,
          "id": "conv-1",
          "locked": false,
          "parentId": "conv-4",
          "props": {
            "align": "left",
            "color": "",
            "level": 1,
            "text": "Build something great",
          },
          "responsive": {},
          "style": {
            "fontSize": "2.25rem",
            "fontWeight": 700,
            "lineHeight": "2.5rem",
            "margin": "0 0 0.5rem",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-2": {
          "children": [],
          "hidden": false,
          "id": "conv-2",
          "locked": false,
          "parentId": "conv-4",
          "props": {
            "align": "left",
            "text": "A description that tells visitors what you do.",
          },
          "responsive": {},
          "style": {
            "fontSize": "1.125rem",
            "lineHeight": "1.75rem",
            "margin": "0 0 0.75rem",
            "marginTop": "1rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-3": {
          "children": [],
          "hidden": false,
          "id": "conv-3",
          "locked": false,
          "parentId": "conv-4",
          "props": {
            "href": "/start",
            "importClasses": [
              "btn",
              "btn-primary",
            ],
            "style": "primary",
            "text": "Get started",
          },
          "responsive": {},
          "style": {
            "background": "var(--primary, #7c5cfc)",
            "borderRadius": "0.5rem",
            "color": "var(--primary-foreground, #ffffff)",
            "fontWeight": 600,
            "padding": "0.75rem 1.5rem",
          },
          "type": "button",
          "visible": true,
        },
        "conv-4": {
          "children": [
            "conv-1",
            "conv-2",
            "conv-3",
          ],
          "hidden": false,
          "id": "conv-4",
          "locked": false,
          "parentId": "conv-5",
          "props": {
            "name": "",
          },
          "responsive": {},
          "style": {
            "display": "flex",
            "flexDirection": "column",
            "gap": "1rem",
            "maxWidth": "36rem",
            "padding": "2rem 0",
          },
          "type": "container",
          "visible": true,
        },
        "conv-5": {
          "children": [
            "conv-4",
          ],
          "hidden": false,
          "id": "conv-5",
          "locked": false,
          "parentId": null,
          "props": {
            "alignItems": "center",
            "gap": 32,
            "importClasses": [
              "hero",
            ],
            "layoutDirection": "row",
            "name": "Hero",
          },
          "responsive": {},
          "style": {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": "2rem",
            "paddingBottom": "5rem",
            "paddingLeft": "1.5rem",
            "paddingRight": "1.5rem",
            "paddingTop": "5rem",
          },
          "type": "row",
          "visible": true,
        },
      },
      "rootIds": [
        "conv-5",
      ],
    },
  },
}
`;

exports[`snapshots (deterministic conversion output) > matches the pricing grid snapshot 1`] = `
{
  "ok": true,
  "value": {
    "report": {
      "blockTypeCounts": {
        "button": 3,
        "container": 1,
        "grid": 1,
        "heading": 4,
        "paragraph": 6,
        "pricing-card": 3,
      },
      "confidence": 0.9,
      "convertedBlockCount": 18,
      "detectedFramework": "tailwind",
      "ignoredCode": [],
      "replacedRuntimeBehavior": [],
      "rootCount": 1,
      "unsupportedConstructs": [],
      "warnings": [
        {
          "code": "css-class-reference",
          "message": "Class "pricing-section" was not converted (no matching style utility or CSS applied)",
          "path": "section",
        },
        {
          "code": "css-class-reference",
          "message": "Class "pricing-card" was not converted (no matching style utility or CSS applied)",
          "path": "section > div > div",
        },
      ],
    },
    "tree": {
      "nodes": {
        "conv-1": {
          "children": [],
          "hidden": false,
          "id": "conv-1",
          "locked": false,
          "parentId": "conv-18",
          "props": {
            "align": "left",
            "color": "",
            "level": 2,
            "text": "Simple pricing",
          },
          "responsive": {},
          "style": {
            "fontSize": "1.875rem",
            "fontWeight": 700,
            "lineHeight": "2.25rem",
            "margin": "0 0 0.5rem",
            "textAlign": "center",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-10": {
          "children": [],
          "hidden": false,
          "id": "conv-10",
          "locked": false,
          "parentId": "conv-11",
          "props": {
            "href": "#",
            "style": "primary",
            "text": "Choose plan",
          },
          "responsive": {},
          "style": {
            "background": "var(--primary, #7c5cfc)",
            "borderRadius": "0.5rem",
            "color": "var(--primary-foreground, #ffffff)",
            "fontWeight": 600,
            "padding": "0.75rem 1.5rem",
          },
          "type": "button",
          "visible": true,
        },
        "conv-11": {
          "children": [
            "conv-7",
            "conv-8",
            "conv-9",
            "conv-10",
          ],
          "hidden": false,
          "id": "conv-11",
          "locked": false,
          "parentId": "conv-17",
          "props": {
            "importClasses": [
              "pricing-card",
            ],
            "name": "Pro",
            "period": "per month",
            "price": "$29",
          },
          "responsive": {},
          "style": {
            "background": "var(--card, #ffffff)",
            "border": "1px solid var(--border, #e5e5e5)",
            "borderRadius": "0.75rem",
            "padding": "1.5rem",
            "shadowDepth": "medium",
          },
          "type": "pricing-card",
          "visible": true,
        },
        "conv-12": {
          "children": [],
          "hidden": false,
          "id": "conv-12",
          "locked": false,
          "parentId": "conv-16",
          "props": {
            "align": "left",
            "color": "",
            "level": 3,
            "text": "Team",
          },
          "responsive": {},
          "style": {
            "margin": "0 0 0.5rem",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-13": {
          "children": [],
          "hidden": false,
          "id": "conv-13",
          "locked": false,
          "parentId": "conv-16",
          "props": {
            "align": "left",
            "text": "$99",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-14": {
          "children": [],
          "hidden": false,
          "id": "conv-14",
          "locked": false,
          "parentId": "conv-16",
          "props": {
            "align": "left",
            "text": "per month",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-15": {
          "children": [],
          "hidden": false,
          "id": "conv-15",
          "locked": false,
          "parentId": "conv-16",
          "props": {
            "href": "#",
            "style": "primary",
            "text": "Choose plan",
          },
          "responsive": {},
          "style": {
            "background": "var(--primary, #7c5cfc)",
            "borderRadius": "0.5rem",
            "color": "var(--primary-foreground, #ffffff)",
            "fontWeight": 600,
            "padding": "0.75rem 1.5rem",
          },
          "type": "button",
          "visible": true,
        },
        "conv-16": {
          "children": [
            "conv-12",
            "conv-13",
            "conv-14",
            "conv-15",
          ],
          "hidden": false,
          "id": "conv-16",
          "locked": false,
          "parentId": "conv-17",
          "props": {
            "importClasses": [
              "pricing-card",
            ],
            "name": "Team",
            "period": "per month",
            "price": "$99",
          },
          "responsive": {},
          "style": {
            "background": "var(--card, #ffffff)",
            "border": "1px solid var(--border, #e5e5e5)",
            "borderRadius": "0.75rem",
            "padding": "1.5rem",
            "shadowDepth": "medium",
          },
          "type": "pricing-card",
          "visible": true,
        },
        "conv-17": {
          "children": [
            "conv-6",
            "conv-11",
            "conv-16",
          ],
          "hidden": false,
          "id": "conv-17",
          "locked": false,
          "parentId": "conv-18",
          "props": {
            "columns": 3,
            "gap": 24,
            "layoutDirection": "grid",
            "name": "",
          },
          "responsive": {},
          "style": {
            "display": "grid",
            "gap": "1.5rem",
            "gridTemplateColumns": "repeat(3, minmax(0, 1fr))",
            "marginTop": "2rem",
          },
          "type": "grid",
          "visible": true,
        },
        "conv-18": {
          "children": [
            "conv-1",
            "conv-17",
          ],
          "hidden": false,
          "id": "conv-18",
          "locked": false,
          "parentId": null,
          "props": {
            "importClasses": [
              "pricing-section",
            ],
            "name": "Section",
          },
          "responsive": {},
          "style": {
            "display": "flex",
            "flexDirection": "column",
            "gap": "1rem",
            "padding": "2rem 0",
            "paddingBottom": "4rem",
            "paddingTop": "4rem",
          },
          "type": "container",
          "visible": true,
        },
        "conv-2": {
          "children": [],
          "hidden": false,
          "id": "conv-2",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "align": "left",
            "color": "",
            "level": 3,
            "text": "Starter",
          },
          "responsive": {},
          "style": {
            "margin": "0 0 0.5rem",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-3": {
          "children": [],
          "hidden": false,
          "id": "conv-3",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "align": "left",
            "text": "$9",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-4": {
          "children": [],
          "hidden": false,
          "id": "conv-4",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "align": "left",
            "text": "per month",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-5": {
          "children": [],
          "hidden": false,
          "id": "conv-5",
          "locked": false,
          "parentId": "conv-6",
          "props": {
            "href": "#",
            "style": "primary",
            "text": "Choose plan",
          },
          "responsive": {},
          "style": {
            "background": "var(--primary, #7c5cfc)",
            "borderRadius": "0.5rem",
            "color": "var(--primary-foreground, #ffffff)",
            "fontWeight": 600,
            "padding": "0.75rem 1.5rem",
          },
          "type": "button",
          "visible": true,
        },
        "conv-6": {
          "children": [
            "conv-2",
            "conv-3",
            "conv-4",
            "conv-5",
          ],
          "hidden": false,
          "id": "conv-6",
          "locked": false,
          "parentId": "conv-17",
          "props": {
            "importClasses": [
              "pricing-card",
            ],
            "name": "Starter",
            "period": "per month",
            "price": "$9",
          },
          "responsive": {},
          "style": {
            "background": "var(--card, #ffffff)",
            "border": "1px solid var(--border, #e5e5e5)",
            "borderRadius": "0.75rem",
            "padding": "1.5rem",
            "shadowDepth": "medium",
          },
          "type": "pricing-card",
          "visible": true,
        },
        "conv-7": {
          "children": [],
          "hidden": false,
          "id": "conv-7",
          "locked": false,
          "parentId": "conv-11",
          "props": {
            "align": "left",
            "color": "",
            "level": 3,
            "text": "Pro",
          },
          "responsive": {},
          "style": {
            "margin": "0 0 0.5rem",
          },
          "type": "heading",
          "visible": true,
        },
        "conv-8": {
          "children": [],
          "hidden": false,
          "id": "conv-8",
          "locked": false,
          "parentId": "conv-11",
          "props": {
            "align": "left",
            "text": "$29",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
        "conv-9": {
          "children": [],
          "hidden": false,
          "id": "conv-9",
          "locked": false,
          "parentId": "conv-11",
          "props": {
            "align": "left",
            "text": "per month",
          },
          "responsive": {},
          "style": {
            "lineHeight": "1.6",
            "margin": "0 0 0.75rem",
          },
          "type": "paragraph",
          "visible": true,
        },
      },
      "rootIds": [
        "conv-18",
      ],
    },
  },
}
`;
